--- a/Components/Pages/Login.razor
+++ b/Components/Pages/Login.razor
@@ -65,7 +65,7 @@
 
     protected override void OnInitialized()
     {
-        Users = UserService.LoadUserAccounts();
+        Users = UserService.UserAccounts();
     }
 
     private void Logins()
